<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
<RelativeLayout
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/enter_item"/>

    <EditText
        android:id="@+id/et_groceryItem"
        android:layout_below="@id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item"/>

    <EditText
        android:id="@+id/et_groceryQty"
        android:layout_below="@id/et_groceryItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/quantity_hint"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_marginTop="5dp"
        android:layout_below="@id/et_groceryQty"
        android:text="@string/save_title"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>