<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_textAlert"
                android:layout_marginTop="19dp"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btn_yesButton"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_textAlert"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="120dp"
                android:layout_marginStart="113dp"
                android:layout_marginTop="26dp"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>